# agpu

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: rust.yml
bench/: Cargo.toml
bench/.cargo/: config.toml
bench/benches/: buffer_usages.rs  pipeline_switching.rs
bench/benches/shader/: empty.frag  empty.frag.spv  empty.vert.spv
examples/: depth-bias.rs  egui.rs  manual.rs  triangle.rs  wgpu-cube.rs  wgpu-hello-compute.rs  wgpu-hello-triangle.rs  wgpu-hello.rs
examples/shader/: cube.wgsl  dog.frag.spv  egui.frag  egui.frag.spv  egui.vert  egui.vert.spv  hello-triangle.wgsl  triangle.wgsl
macro/: Cargo.toml
macro/src/: lib.rs
pp/: Cargo.toml
pp/examples/: bloom.rs
pp/examples/shader/: triangle.wgsl
pp/src/: lib.rs
pp/src/bloom/: mod.rs
pp/src/bloom/shader/: add.frag  add.frag.spv  filter-down.frag  filter-down.frag.spv  filter-threshold.frag  filter-threshold.frag.spv  filter-up.frag  filter-up.frag.spv  screen.vert  screen.vert.spv
src/: compute.rs  egui.rs  graphics.rs  lib.rs  macros.rs  prelude.rs  winit.rs
src/egui/shader/: egui.frag  egui.frag.spv  egui.vert  egui.vert.spv
src/graphics/: buffer.rs  error.rs  gpu.rs  pipeline.rs  profiler.rs  texture.rs  viewport.rs
src/graphics/buffer/: binding.rs  builder.rs  vertex_layout.rs  view.rs
src/graphics/gpu/: builder.rs
src/graphics/pipeline/: builder.rs
src/graphics/profiler/: marker.rs  queryset.rs  section.rs
src/graphics/texture/: builder.rs  format.rs  sampler.rs  view.rs
src/graphics/viewport/: builder.rs  frame.rs  render_pass.rs
src/shader/: screen.vert  screen.vert.spv  uv.frag
src/winit/: display.rs
tests/: derive_vertex_layout.rs
