[package]
name = "agpu"
version = "0.1.1"
edition = "2018"
resolver = "2"
description = "Abstract GPU Project"
homepage = "https://github.com/lyricwulf/agpu"
repository = "https://github.com/lyricwulf/agpu"
keywords = ["gpu", "graphics", "compute"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.11", features = ["spirv"] }
half = { version = "1.8", optional = true }
futures = "0.3"
bytemuck = "1.7"
num-traits = "0.2"
raw-window-handle = "0.4"
tracing = "0.1"

[dependencies.agpu-macro]
version = "0.1.1"
optional = true

[dependencies.winit]
version = "0.25"
optional = true

[dependencies.egui]
optional = true 
version = "0.15"
features = ["convert_bytemuck"]

[features]
profiler = []
macro = ["agpu-macro"]
default = ["profiler", "egui", "winit", "macro", "half"]

[dev-dependencies]  
# Used in example
tracing-subscriber = "0.3"
# egui example
egui-winit = "0.15"
# math lib for examples
nalgebra = "0.29"