[package]
name = "agpu"
version = "0.1.2"
edition = "2021"
resolver = "2"
description = "Abstract GPU Project"
homepage = "https://github.com/lyricwulf/agpu"
repository = "https://github.com/lyricwulf/agpu"
keywords = ["gpu", "graphics", "compute"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.12", features = ["spirv"] }
half = { version = "2.0", optional = true }
futures = "0.3"
bytemuck = "1.7"
num-traits = "0.2"
raw-window-handle = "0.4"
tracing = "0.1"

[dependencies.agpu-macro]
version = "0.1.1"
path = "./macro"
optional = true

[dependencies.winit]
version = "0.26"
optional = true

[dependencies.egui]
optional = true 
version = "0.17"
features = ["convert_bytemuck"]

[features]
profiler = []
macro = ["agpu-macro"]
default = ["profiler", "egui", "winit", "macro", "half"]

[dev-dependencies]  
# Used in example
tracing-subscriber = "0.3"
# egui example
egui-winit = "0.17"
# math lib for examples
nalgebra = "0.30"