[package]
name = "agpu_bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agpu = { path = "../" }
criterion = "0.3"

# [[bench]]
# name = "pipeline_switching"
# harness = false

[[bench]]
name = "buffer_usages"
harness = false