[package]
name = "agpu-macro"
version = "0.1.2"
edition = "2021"
resolver = "2"
description = "agpu derive macros"
homepage = "https://github.com/lyricwulf/agpu"
repository = "https://github.com/lyricwulf/agpu"
keywords = ["gpu", "graphics", "compute"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

[dev-dependencies]  
# Test derive traits
agpu = { path = "../" }